[tool.poetry]
name = "brenger"
version = "0.1.0"
description = ""
authors = ["Omer <omer@whoppah.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
black = "<23.3.0"
requests = "^2.31.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
